# telogify

./: .gitignore  .gitleaks.toml  CURSOR_SESSION_LOG.md  LICENSE  PRODUCT.md  README.md
backend/: .env.example  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 32958bed1585_add_season_deployment_insight.py  3df6990e5b55_add_model_used_and_prompt_version_to_.py  4409de28fc1d_add_quali_insight.py  68a46bfef61c_initial_schema.py  a1b2c3d4e5f6_add_laps_to_session_result.py  b2c3d4e5f6a7_add_sector_best_quali_character.py  j0k1l2m3n4o5_add_accel_sample.py  (+11 more)
backend/scripts/: audit_insights.py
backend/telogify/: cli.py  config.py  db.py  email.py  models.py  pipeline.py  serialize.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_attribution.py  test_candidates.py  test_car_speed_profile.py  test_cli.py  test_constructor_index.py  test_db_adapters.py  test_degradation.py  test_deployment.py  test_diagnose.py  test_email.py  test_fastf1_cache.py  test_fingerprints.py  test_guardrails.py  test_insights.py  test_kinematics.py  test_llm_providers.py  test_loader.py  test_miner_caps.py  test_pipeline.py  test_position_swings.py  test_quali_character_analysis.py  test_quali_character_ingest.py  test_quali_trace.py  test_race_control.py  test_race_pace.py  test_results.py  test_schedule.py  test_season.py  test_season_deployment.py  test_season_deployment_agent.py  test_season_stats.py  test_sectors_analysis.py  test_sectors_ingest.py  test_segment.py  test_serialize.py  test_sessions.py  test_sprint_candidates.py  (+5 more)
(+134 files in other folders)
