[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telogify"
version = "0.1.0"
description = "F1 telemetry intelligence: 3 quantified insights per race weekend."
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["telogify*"]

[project.scripts]
telogify = "telogify.cli:app"
