[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telogify"
version = "0.1.0"
description = "F1 telemetry intelligence: 3 quantified insights per race weekend."
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["telogify*"]

[project.scripts]
telogify = "telogify.cli:app"

[tool.coverage.run]
source = ["telogify"]
omit = ["telogify/agent/prompts.py"]

[tool.coverage.report]
show_missing = true
# Target, not current reality -- pytest exits non-zero below this until the suite closes
# the gap. Raise/lower deliberately, don't silence by dropping the number.
fail_under = 90
